--- a/src/caelestia/data/templates/gtk.css
+++ b/src/caelestia/data/templates/gtk.css
@@ -15,6 +15,8 @@
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
 @define-color sidebar_backdrop_color @window_bg_color;
+@define-color theme_selected_bg_color alpha(@accent_color, 0.15);
+@define-color theme_selected_fg_color @primary;
 
 /* Custom app theming hook - managed by user/shell */
 @import "custom.css";
