--- a/src/caelestia/data/templates/thunar.css
+++ b/src/caelestia/data/templates/thunar.css
@@ -14,7 +14,7 @@
    ============================================================================= */
 
 .thunar.background {
-    background: {{ $surface }};
+    background: { $surface };
 }
 
 .thunar .titlebar {
@@ -30,7 +30,7 @@
    ============================================================================= */
 
 /* Paned separator between sidebar and main view */
-.thunar paned > separator {
+.thunar paned>separator {
     min-width: 4px;
     margin-right: -7px;
     margin-left: -7px;
@@ -42,13 +42,13 @@
 
 /* Main file view frame */
 .thunar .frame.standard-view {
-    padding:10px;
+    padding: 10px;
     margin-right: 15px;
     border-radius: 15px;
-    background-color: {{ $surfaceContainerLow }};
-    animation:fading 400ms ease forwards; 
-    opacity:0;
-    animation-delay:250ms; 
+    background-color: { $surfaceContainerLow };
+    animation: fading 400ms ease forwards;
+    opacity: 0;
+    animation-delay: 250ms;
 }
 
 .thunar .frame.standard-view .view,
@@ -57,7 +57,7 @@
 }
 
 .thunar .frame.standard-view .view *:selected {
-	color: {{ $primary }};
+    color: { $primary };
 }
 
 /* =============================================================================
@@ -67,9 +67,9 @@
 .thunar .sidebar {
     padding: 0 20px;
     background: none;
-    animation:fading 600ms ease forwards;
-    animation-delay:100ms;
-    opacity:0;
+    animation: fading 600ms ease forwards;
+    animation-delay: 100ms;
+    opacity: 0;
 }
 
 .thunar .sidebar .view {
@@ -79,12 +79,12 @@
 }
 
 .thunar .sidebar .view:hover {
-    background: alpha({{ $onSurface }}, 0.1);
+    background: alpha({ $onSurface }, 0.1);
 }
 
 .thunar .sidebar .view:selected {
-    background: alpha({{ $primary }}, 0.15);
-    color: {{ $primary }};
+    background: alpha({ $primary }, 0.15);
+    color: { $primary };
 }
 
 /* =============================================================================
@@ -92,39 +92,39 @@
    ============================================================================= */
 
 .thunar .path-bar-button {
-    margin:0;
-    padding:8px 5px;
+    margin: 0;
+    padding: 8px 5px;
     transition: all ease 0.4s;
 }
 
 .thunar .location-button.toggle:checked,
 .thunar .path-bar-button.toggle:checked {
     padding: 8px 25px;
-    background: alpha({{ $primary }}, 0.15);
-    color: {{ $primary }};
+    background: alpha({ $primary }, 0.15);
+    color: { $primary };
     box-shadow: none;
 }
 
-.thunar .location-button.path-bar-button:not(:checked){
-    background-color:{{ $surfaceContainerLow }};
+.thunar .location-button.path-bar-button:not(:checked) {
+    background-color: { $surfaceContainerLow };
 }
 
-.thunar .location-button.path-bar-button:not(:checked):hover{
-    background:alpha({{ $primary }},0.08);
-    color:alpha({{ $primary }},0.8);
+.thunar .location-button.path-bar-button:not(:checked):hover {
+    background: alpha({ $primary }, 0.08);
+    color: alpha({ $primary }, 0.8);
 }
 
-.thunar .location-button.toggle + .location-button.toggle:checked {
+.thunar .location-button.toggle+.location-button.toggle:checked {
     margin-left: 0px;
     padding: 0 25px;
 }
 
-.thunar .titlebar{
-    padding:0px;
+.thunar .titlebar {
+    padding: 0px;
 }
 
-.thunar .titlebar toolbar{
-    padding:15px 0;
+.thunar .titlebar toolbar {
+    padding: 15px 0;
 }
 
 /* =============================================================================
@@ -132,13 +132,13 @@
    ============================================================================= */
 
 .thunar button.toggle:checked {
-    color: {{ $primary }};
+    color: { $primary };
 }
 
 .thunar .image-button {
-    padding:8px;
-    margin:0 0 0 8px;
-    transition:all ease 0.4s;
+    padding: 8px;
+    margin: 0 0 0 8px;
+    transition: all ease 0.4s;
 }
 
 /* =============================================================================
@@ -146,11 +146,11 @@
    ============================================================================= */
 
 .thunar statusbar {
-    background-color: {{ $surfaceContainerLow }};
+    background-color: { $surfaceContainerLow };
     border-radius:15px;
     padding:10px 10px;
     margin:15px 5px 15px -10px;
-    color: {{ $onSurface }};
+    color: { $onSurface };
 }
 
 
@@ -158,8 +158,8 @@
    Image preview
    ============================================================================= */
 
-.thunar box.vertical .image{
-    margin:15px;
+.thunar box.vertical .image {
+    margin: 15px;
 }
 
 
@@ -167,6 +167,8 @@
    Animation
    ============================================================================= */
 
-@keyframes fading{
-    to{ opacity:1; }
+@keyframes fading {
+    to {
+        opacity: 1;
+    }
 }
