--- a/src/caelestia/data/templates/thunar.css
+++ b/src/caelestia/data/templates/thunar.css
@@ -43,7 +43,7 @@
 /* Main file view frame */
 .thunar .frame.standard-view {
     padding: 10px;
-    margin-right: 15px;
+    margin: 10px 15px 0 0;
     border-radius: 15px;
     background-color: {{ $surfaceContainerLow }};
     animation: fading 400ms ease forwards;
@@ -69,11 +69,16 @@
 /*  Tabs */
 .thunar header.top{
     background:none;
+    padding:0 10px 0 0;
+    margin: 0 0 0 -2px;
 }
 
 .thunar header.top tabs .reorderable-page{
-    margin:0 10px 15px 0;
+    margin: 0;
     transition:all ease 300ms;
+}
+.thunar header.top tabs .reorderable-page + .reorderable-page{
+    margin: 0 0 0 10px;
 }
 
 .thunar header.top tabs .reorderable-page:hover{
@@ -147,11 +152,7 @@
 }
 
 .thunar .titlebar {
-    padding: 0px;
-}
-
-.thunar .titlebar toolbar {
-    padding: 15px 0;
+    padding: 15px 0 5px 0;
 }
 
 /* =============================================================================
